--- a/iac-adb-360/pipelines/azure/configprd.yml
+++ b/iac-adb-360/pipelines/azure/configprd.yml
@@ -2,6 +2,6 @@ variables:
   baseName: adb3600501
   resourcegroup: rg-wus2-$(baseName)-prd  
   location: westus2
-  kvsreadersgroupoid: 805f7bfc-80cf-4f21-8a2a-acba919a1409
-  kvadminsoid: 4a16f19d-952d-48a2-9999-0d9bf119a405
+  kvsreadersgroupoid: b52e4d87-587c-45b5-ada1-9681975cbc81
+  kvadminsoid: 47746b00b-f6e4-410d-81f6-8926c7a4e9ae
   
