--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -45,19 +45,20 @@ stages:
   jobs:
   - deployment: 
     environments: ${{ variables.env }}
-    - task: CmdLine@2
-      inputs:
-        script: |
-          curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
-      displayName: 'Install Databricks CLI v 2'
-    - task: AzureCLI@2
-      displayName: 'call script to deploy bundle'
-      inputs:
-        azureSubscription: 'adb-sc'
-        scriptType: 'bash'
-        scriptLocation: 'scriptPath'
-        scriptPath: './bundle_adb_360/helpers/bundle-deploy.sh'
-        arguments: '${{ variables.resourceGroupName }} ${{ variables.tenantId }} ${{ variables.clientId }} $(clientSecret) ${{ variables.env }}'
+    steps:
+      - task: CmdLine@2
+        inputs:
+          script: |
+            curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
+        displayName: 'Install Databricks CLI v 2'
+      - task: AzureCLI@2
+        displayName: 'call script to deploy bundle'
+        inputs:
+          azureSubscription: 'adb-sc'
+          scriptType: 'bash'
+          scriptLocation: 'scriptPath'
+          scriptPath: './bundle_adb_360/helpers/bundle-deploy.sh'
+          arguments: '${{ variables.resourceGroupName }} ${{ variables.tenantId }} ${{ variables.clientId }} $(clientSecret) ${{ variables.env }}'
 
 
 
