--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -37,7 +37,7 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Pipeline Artifact Bundle '
       inputs:
-        targetPath: $(Pipeline.Workspace)/bundle_adb_360
+        targetPath: $(Pipeline.Workspace)/s/bundle_adb_360
         artifact:   'bundle'
 
 - stage: deploy_bundle_dev
