--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -65,7 +65,7 @@ stages:
                   azureSubscription: 'adb-sc'
                   scriptType: 'bash'
                   scriptLocation: 'scriptPath'
-                  scriptPath: 'bundle/helpers/bundle-deploy.sh'
+                  scriptPath: '../bundle/helpers/bundle-deploy.sh'
                   arguments: '${{ variables.resourceGroupName }} ${{ variables.tenantId }} ${{ variables.clientId }} $(clientSecret) ${{ variables.env }}'
   
 
