--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -60,6 +60,15 @@ stages:
                     curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
                 displayName: 'Install Databricks CLI v 2'
               - task: AzureCLI@2
+                displayName: 'validate bundle'
+                inputs:
+                  azureSubscription: 'adb-sc'
+                  scriptType: 'bash'
+                  scriptLocation: 'inlineScript'
+                  inlineScript: |
+                    cd bundle_adb_360
+                    databricks bundle validate
+              - task: AzureCLI@2
                 displayName: 'call script to deploy bundle'
                 inputs:
                   azureSubscription: 'adb-sc'
