--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -62,7 +62,7 @@ stages:
               - task: AzureCLI@2
                 displayName: 'call script to deploy bundle'
                 inputs:
-                  azureSubscription: 'dev2'
+                  azureSubscription: 'AzureDevExtServiceConnection'
                   scriptType: 'bash'
                   scriptLocation: 'scriptPath'
                   scriptPath: '../bundle/helpers/bundle-deploy.sh'
