--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -65,7 +65,7 @@ stages:
                   scriptType: 'bash'
                   scriptLocation: 'inlineScript'
                   inlineScript: |
-                    cd bundle
+                    cd ../bundle
                     databricks bundle validate
               - task: AzureCLI@2
                 displayName: 'call script to deploy bundle'
