--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -56,6 +56,7 @@ stages:
               - task: CmdLine@2
                 inputs:
                   script: |
+                    cd ../bundle_adb_360
                     curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
                 displayName: 'Install Databricks CLI v 2'
               - task: AzureCLI@2
