--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -53,6 +53,7 @@ stages:
       runOnce:
           deploy:
             steps:
+              - checkout: self
               - task: CmdLine@2
                 inputs:
                   script: |
