--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -67,7 +67,7 @@ stages:
                   scriptLocation: 'scriptPath'
                   scriptPath: '../bundle_adb_360/helpers/bundle-deploy.sh'
                   arguments: '${{ variables.resourceGroupName }} ${{ variables.tenantId }} ${{ variables.clientId }} $(clientSecret) ${{ variables.env }}'
-              - powershell: tree ../../
+              - powershell: tree ../ -a
   
 
 
