--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -38,6 +38,7 @@ stages:
       inputs:
         targetPath: $(Pipeline.Workspace)/s/bundle_adb_360
         artifact:   'bundle_adb_360'
+        StoreAsTar: true
 
 - stage: deploy_bundle_dev
   displayName: 'Deploy Bundle to Dev'
