chore: Update init-pipeline.yml to include task for downloading build artifacts

--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -54,6 +54,9 @@ stages:
       runOnce:
           deploy:
             steps:
+              - task: DownloadBuildArtifacts@1
+                inputs:
+                  extractTars: true
               - task: CmdLine@2
                 inputs:
                   script: |
