chore: Update init-pipeline.yml to include task for installing Databricks CLI v2

--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -8,7 +8,7 @@ trigger:
       - '*'
 
 variables:
-- group: vgdevadb360
+- template: 'variables/global.yml'
 
 stages:
 - stage: stg_validate_deploy_bundles
