--- a/bundle_adb_360/pipelines/azure/variables/global.yml
+++ b/bundle_adb_360/pipelines/azure/variables/global.yml
@@ -5,3 +5,7 @@
     value: 'JFolberth'
   - name: repourl
     value: 'https://github.com/JFolberth/Databricks360.git'
+  - name: serviceName
+    value: 'adb3600513'
+  - regionAbrv:
+    value: 'wus'
