--- a/bundle_adb_360/pipelines/azure/variables/global.yml
+++ b/bundle_adb_360/pipelines/azure/variables/global.yml
@@ -1,11 +1,11 @@
   variables:
-  - name: tenantid
-    value: '36070862-cf76-4c7b-a2b3-d1177f9469d1'
   - name: ghuser
     value: 'JFolberth'
   - name: repourl
     value: 'https://github.com/JFolberth/Databricks360.git'
   - name: serviceName
     value: 'adb3600513'
-  - regionAbrv:
-    value: 'wus'
+  - name: regionAbrv
+    value: 'wus2'
+  - name: databricsAbrv
+    value: 'adbws'
