--- a/bundle_adb_360/pipelines/azure/variables/dev.yml
+++ b/bundle_adb_360/pipelines/azure/variables/dev.yml
@@ -19,5 +19,7 @@ variables:
     value: https://adb-141546056528589.9.azuredatabricks.net
   - name: serviceIdentifier
     value: '0513'
+  - name: env
+    value: 'dev'
   
   
