--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -64,7 +64,7 @@ stages:
               - task: AzureCLI@2
                 displayName: 'call script to deploy bundle'
                 inputs:
-                  azureSubscription: 'AzureDevExtServiceConnection'
+                  azureSubscription: 'adb-sc'
                   scriptType: 'bash'
                   scriptLocation: 'inlineScript'
                   inlineScript: |
