--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -68,8 +68,9 @@ stages:
                   scriptType: 'bash'
                   scriptLocation: 'inlineScript'
                   inlineScript: |
-                    az login
-                    azureSubscriptionId=$(az account show --query id --output tsv)
+                    export ARM_CLIENT_ID=${{ variables.clientId }}
+                    export ARM_CLIENT_SECRET=$(clientSecret)
+                    export ARM_TENANT_ID=$(az account show --query tenantId --output tsv) 
                     export DATABRICKS_AZURE_RESOURCE_ID= '/subscriptions/$azureSubscriptionId/${{ variables.databricksResourceId }}'
                     cd ../${{ variables.artifactName }}
                     databricks bundle deploy -t ${{ variables.env }}
