--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -10,7 +10,7 @@ trigger:
 variables:
   - template: 'variables/global.yml'
 parameters:
-- name: evironmentObjects
+- name: environmentObjects
   type: object
   default:
     - environmentName: 'dev'
