--- a/bundle_adb_360/pipelines/azure/dab_deploy_stage_env.yml
+++ b/bundle_adb_360/pipelines/azure/dab_deploy_stage_env.yml
@@ -11,8 +11,10 @@ stages:
       variables:
         - template: 'variables/${{ environmentObject.environmentName }}.yml'
         - group: vg${{ variables.env }}adb360
+        - name: resourceGroupName
+          value: '${{ variables.resourceAbrv }}-${{ variables.resourceAbrv }}-${{variables.regionAbrv }}-${{ variables.serviceName }}-${{ variables.serviceIdentifier }}$
         - name: databricksResourceId
-          value: '${{ variables.resourceGroupName }}/providers/Microsoft.Databricks/workspaces/${{ variables.databricksAbrv }}-${{variables.regionAbrv }}${{ variables.serviceName }}${{ variables.serviceIdentifier }}${{ variables.resourceGroupName }}'
+          value: '${{ variables.resourceGroupName }}/providers/Microsoft.Databricks/workspaces/${{ variables.databricksAbrv }}-${{variables.regionAbrv }}${{ variables.serviceName }}${{ variables.serviceIdentifier }}'
        
       jobs:
       - deployment: 
