--- a/bundle_adb_360/pipelines/azure/dab_validate_stage.yml
+++ b/bundle_adb_360/pipelines/azure/dab_validate_stage.yml
@@ -4,14 +4,13 @@ stages:
   variables:
     - template: 'variables/global.yml'
   jobs:
+  - template: publish_pipeline_artifact_job.yml
+    parameters:
+      artifactName: ${{ variables.artfactName
+      pathToArtifact: ${{ variables.bundleLocation }}
   - job: j_validate_deploy_bundles
     displayName: 'validate_deploy_bundles'
     steps:
-    - task: PublishPipelineArtifact@1
-      displayName: 'Publish Pipeline Artifact Bundle '
-      inputs:
-        targetPath: $(Pipeline.Workspace)/s/bundle_adb_360
-        artifact:   ${{ variables.artifactName }}
     - task: CmdLine@2
       inputs:
         script: |
