--- a/bundle_adb_360/pipelines/azure/publish_pipeline_artifact_job.yml
+++ b/bundle_adb_360/pipelines/azure/publish_pipeline_artifact_job.yml
@@ -6,8 +6,8 @@ parameters:
   type: string
   default: $(Pipeline.Workspace)
 jobs:
-  - job: publish_${{ parameterse.artifactName }}
-    displayName: 'Publish ${{ parameterse.artifactName }}'
+  - job: publish_${{ parameters.artifactName }}
+    displayName: 'Publish ${{ parameters.artifactName }}'
     steps:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Pipeline Artifact Bundle '
