--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -16,7 +16,7 @@ parameters:
 
 stages:
 - template: dab_validate_stage.yml
-- template: dab_deploy_stage_env.yml
+- template: dab_deploy_env_stage.yml
   parameters:
     environmentObjects: ${{ parameters.environmentObjects }}
 
