--- a/bundle_adb_360/pipelines/azure/dab_validate_job.yml
+++ b/bundle_adb_360/pipelines/azure/dab_validate_job.yml
@@ -1,6 +1,7 @@
 parameters:
 - name: artifactName
-  value: ''
+  type: string
+  default: ''
 jobs:
   - job: j_validate_deploy_bundles
     displayName: 'validate_deploy_bundles'
