--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -1,3 +1,10 @@
+resources:
+  repositories:
+  - repository: templates
+    type: github
+    name: JFolberth/TheYAMLPipelineOne
+    endpoint: JFolberth
+    ref: feature/databricks
 trigger:
   branches:
     include:
@@ -15,7 +22,7 @@ parameters:
     - environmentName: 'dev'
 
 stages:
-- template: dab_validate_publish_stage.yml
+- template: dab_validate_publish_stage.yml@templates
 - template: dab_deploy_env_stage.yml
   parameters:
     environmentObjects: ${{ parameters.environmentObjects }}
