--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -20,6 +20,12 @@ parameters:
   type: object
   default:
     - environmentName: 'dev'
+- name: artifactName
+  type: string
+  default: 'bundle_adb_360'
+- name: serviceName
+  type: string
+  default: 'adb360'
 
 stages:
 - template: stages/dab_validate_publish_stage.yml@templates
