--- a/bundle_adb_360/pipelines/azure/init-pipeline.yml
+++ b/bundle_adb_360/pipelines/azure/init-pipeline.yml
@@ -20,17 +20,23 @@ parameters:
   type: object
   default:
     - environmentName: 'dev'
-variables:
-- template: variables/global.yml
+- name: artifactName
+  type: string
+  default: 'bundle_adb_360'
+- name: serviceName
+  type: string
+  default: 'adb360'
 
 stages:
 - template: stages/dab_validate_publish_stage.yml@templates
   parameters:
-    artifactName: ${{ variables.artifactName }}
-    serviceName: ${{ variables.serviceName }}
-- template: dab_deploy_env_stage.yml
+    artifactName: ${{ parameters.artifactName }}
+    serviceName: ${{ parameters.serviceName }}
+- template: stages/dab_deploy_stage.yml@templates
   parameters:
     environmentObjects: ${{ parameters.environmentObjects }}
+    artifactName: ${{ parameters.artifactName }}
+    serviceName: ${{ parameters.serviceName }}
 
 
 
